traces/bug_218.txt
#218
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:782: error: Deadlock
  Potential self deadlock. `CheckpointTest_MB25056_backfill_not_required_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_MB25056_backfill_not_required_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:782:30: In method `CheckpointTest_MB25056_backfill_not_required_Test::TestBody`
780.     std::string dcp_cursor(DCP_CURSOR_PREFIX);
781.     // Request to register the cursor with a seqno that has been de-duped away
782.     CursorRegResult result = manager->registerCursorBySeqno(
                                  ^
783.             dcp_cursor.c_str(), 1005, CheckpointCursor::Droppable::Yes);
784.     EXPECT_EQ(1011, result.seqno) << "Returned seqno is not expected value.";

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:782:30: Method call: `CheckpointManager::registerCursorBySeqno`
780.     std::string dcp_cursor(DCP_CURSOR_PREFIX);
781.     // Request to register the cursor with a seqno that has been de-duped away
782.     CursorRegResult result = manager->registerCursorBySeqno(
                                  ^
783.             dcp_cursor.c_str(), 1005, CheckpointCursor::Droppable::Yes);
784.     EXPECT_EQ(1011, result.seqno) << "Returned seqno is not expected value.";

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB25056_backfill_not_required_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB25056_backfill_not_required_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
